--- a/index.html
+++ b/index.html
@@ -3,10 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculatrice Hyper Stylée</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
   </head>
   <body>
+    <div class="calculator-container">
+      <p class="js-render-calculation render-calculation">0</p>
+      <div class="button-calculator-container">
+        <button class="js-button-calculator button-calculator" id="seven">
+          7
+        </button>
+        <button class="js-button-calculator button-calculator" id="height">
+          8
+        </button>
+        <button class="js-button-calculator button-calculator" id="nine">
+          9
+        </button>
+        <button
+          class="js-button-calculator btn-bg-orange operator-button"
+          id="multiplication"
+        >
+          *
+        </button>
+        <button class="js-button-calculator button-calculator" id="four">
+          4
+        </button>
+        <button class="js-button-calculator button-calculator" id="five">
+          5
+        </button>
+        <button class="js-button-calculator button-calculator" id="six">
+          6
+        </button>
+        <button
+          class="js-button-calculator btn-bg-orange operator-button"
+          id="substraction"
+        >
+          -
+        </button>
+        <button class="js-button-calculator button-calculator" id="one">
+          1
+        </button>
+        <button class="js-button-calculator button-calculator" id="two">
+          2
+        </button>
+        <button class="js-button-calculator button-calculator" id="three">
+          3
+        </button>
+        <button
+          class="js-button-calculator btn-bg-orange operator-button"
+          id="addition"
+        >
+          +
+        </button>
+        <button
+          class="js-button-calculator button-calculator zero-btn"
+          id="zero"
+        >
+          0
+        </button>
+        <button class="js-button-calculator button-calculator" id="float">
+          ,
+        </button>
+        <button class="js-button-calculator btn-bg-orange" id="equal">=</button>
+        <button
+          class="js-button-calculator btn-bg-orange operator-button"
+          id="division"
+        >
+          /
+        </button>
+        <button
+          class="js-button-calculator button-calculator btn-bg-gray"
+          id="all-clear"
+        >
+          AC
+        </button>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
